tests/warnings/purity_warnings.exp
purity_warnings.m:021: In call to predicate `io.write_string/3':
purity_warnings.m:021:   warning: unnecessary `semipure' indicator.
purity_warnings.m:021:   No purity indicator is necessary.
purity_warnings.m:022: In call to predicate `io.print/3':
purity_warnings.m:022:   warning: unnecessary `impure' indicator.
purity_warnings.m:022:   No purity indicator is necessary.
purity_warnings.m:024: In predicate `purity_warnings.impure_pred1/2':
purity_warnings.m:024:   warning: declared impure but actually pure.
purity_warnings.m:028: In predicate `purity_warnings.impure_pred2/2':
purity_warnings.m:028:   warning: declared impure but actually semipure.
purity_warnings.m:036: In call to predicate `io.write_string/3':
purity_warnings.m:036:   warning: unnecessary `semipure' indicator.
purity_warnings.m:036:   No purity indicator is necessary.
purity_warnings.m:065: In call to predicate `io.print/3':
purity_warnings.m:065:   warning: unnecessary `impure' indicator.
purity_warnings.m:065:   No purity indicator is necessary.
purity_warnings.m:060: In predicate `purity_warnings.impure_method1a_impl/2':
purity_warnings.m:060:   purity error: predicate is impure.
purity_warnings.m:060:   It must be declared `impure' or promised pure.
purity_warnings.m:071: In call to predicate `io.print/3':
purity_warnings.m:071:   warning: unnecessary `semipure' indicator.
purity_warnings.m:071:   No purity indicator is necessary.
purity_warnings.m:062: In predicate `purity_warnings.semipure_method_a_impl/2':
purity_warnings.m:062:   purity error: predicate is semipure.
purity_warnings.m:062:   It must be declared `semipure' or promised pure.
